--- a/index.html
+++ b/index.html
@@ -6,13 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>DigitalOcean</title>
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        
+        <!-- Top Nav -->
+        <nav class="wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <!-- Logo -->
+                    <div class="col-xs-6 col-md-3">
+                        <div class="logo">
+                            <img src="img/logo.png" alt="logo">
+                        </div>
+                    </div>
+                    <!-- Main Menu -->
+                    <div class="hidden-xs hidden-sm col-md-5">
+                        <ul class="main-menu">
+                            <li>
+                                <a href="#">Products<i class="fas fa-chevron-down"></i></a>
+                            </li>
+                            <li>
+                                <a href="#">Customers</a>
+                            </li>
+                            <li>
+                                <a href="#">Community<i class="fas fa-chevron-down"></i></a>
+                            </li>
+                            <li>
+                                <a href="#">Pricing</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Login Menu -->
+                    <div class="hidden-xs hidden-sm col-md-4">
+                        <ul class="login-menu">
+                            <li>
+                                <a href="#">Docs</a>
+                            </li>
+                            <li>
+                                <a href="#">Support<i class="fas fa-chevron-down"></i></a>
+                            </li>
+                            <li>
+                                <a href="#">Login</a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn signup-btn popping">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Burger Menu -->
+                    <div class="col-xs-6 visible-xs-block visible-sm-block">
+                        <div class="burger-menu text-right">
+                            <i class="fas fa-bars blue-txt"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- End Top Nav -->
     </header>
     <!-- END HEADER -->
 
