--- a/index.html
+++ b/index.html
@@ -68,6 +68,55 @@
             </div>
         </nav>
         <!-- End Top Nav -->
+
+        <!-- Banner -->
+        <section class="banner">
+            <div class="wrapper">
+                <div class="container">
+                    <div class="row">
+                        <!-- Teaser -->
+                        <div class="col-xs-12 col-sm-6">
+                            <div class="teaser">
+                                <h1 class="white-txt">The simplest cloud platform for developers & teams</h1>
+                                <p class="white-txt">
+                                    Deploy, manage and scale cloud applications faster and more efficiently on DigitalOcean.
+                                    We make managing infrastructure easy for teams and businesses, whether you're running
+                                    one virtual machine or ten thousand.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Registration Box -->
+                        <div class="col-xs-12 col-sm-6">
+                            <div class="register-box">
+                                <!-- Heading -->
+                                <h2 class="font-size-25">Deploy your apps in seconds.</h2>
+                                <h3 class="blue-txt font-size-25">Get started now.</h3>
+                                <form class="register-form">
+                                    <!-- Email -->
+                                    <div class="form-group">
+                                        <label for="email-input" class="sr-only">Email</label>
+                                        <input type="email" class="form-control" id="email-input" placeholder="Email">
+                                    </div>
+                                    <!-- Password -->
+                                    <div class="form-group">
+                                        <label for="password-input" class="sr-only">Password</label>
+                                        <input type="password" class="form-control" id="password-input" placeholder="Password">
+                                    </div>
+                                    <!-- Buttons -->
+                                    <button type="submit" class="btn">Create your account</button>
+                                    <button type="submit" class="btn">
+                                        <img src="img/google-icon.png" alt="google-icon" class="google-icon">Sign up with Google
+                                    </button>
+                                </form>
+                                <span class="font-size-13">By signing up you agree to the <a href="#">Terms Of Service.</a></span>
+                            </div>
+                            <!-- End Registration Box -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Banner -->
     </header>
     <!-- END HEADER -->
 
