added logo list

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- Banner -->
         <section class="banner">
             <div class="wrapper">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <!-- Teaser -->
                         <div class="col-xs-12 col-sm-6">
@@ -87,7 +87,7 @@
                         </div>
                         <!-- Registration Box -->
                         <div class="col-xs-12 col-sm-6">
-                            <div class="register-box">
+                            <div class="register-box text-center">
                                 <!-- Heading -->
                                 <h2 class="font-size-25">Deploy your apps in seconds.</h2>
                                 <h3 class="blue-txt font-size-25">Get started now.</h3>
@@ -122,7 +122,46 @@
 
     <!-- MAIN -->
     <main>
+        <!-- Logo Section -->
+        <section class="grey-section">
+            <div class="small-wrapper">
+                <h5 class="text-uppercase grey-txt">Innovative businesses trust digitalocean</h5>
+                <!-- Logo List -->
+                <ul class="logo-list">
+                    <!-- Docker -->
+                    <li>
+                        <img src="img/docker.svg" alt="docker">
+                    </li>
+                    <!-- GitLab -->
+                    <li>
+                        <img src="img/gitlab.svg" alt="gitlab">
+                    </li>
+                    <!-- Slack -->
+                    <li>
+                        <img src="img/slack.svg" alt="slack">
+                    </li>
+                    <!-- Hashicrop -->
+                    <li>
+                        <img src="img/hashicorp.svg" alt="hashicorp">
+                    </li>
+                    <!-- Hashicrop -->
+                    <li>
+                        <img src="img/hashicorp.svg" alt="hashicorp">
+                    </li>
+                    <!-- Splunk -->
+                    <li>
+                        <img src="img/splunk.svg" alt="splunk">
+                    </li>
+                </ul>
+                <!-- End Logo List -->
+                <a href="#">View customer stories &nbsp;></a>
+            </div>
+        </section>
+        <!-- End Logo Section -->
 
+        <section class="white-section">
+
+        </section>
     </main>
     <!-- END MAIN -->
 
