added configuration steps

--- a/index.html
+++ b/index.html
@@ -159,9 +159,105 @@
         </section>
         <!-- End Logo Section -->
 
+        <!-- Configuration Process -->
         <section class="white-section">
 
+            <!-- Configuration Heading -->
+            <div class="wrapper text-center">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="darkblue-txt">Deploy and scale seamlessly</h2>
+                            <p class="grey-txt font-size-20">
+                                Our optimized configuration process saves your team time when running and scaling distributed
+                                applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Configuration Steps -->
+            <div class="small-wrapper">
+                <div class="container-fluid">
+                    <div class="row">
+                        <!-- Config List -->
+                        <div class="col-xs-12 col-sm-3">
+                            <ul class="config-list">
+                                <li>
+                                    <a href="#">Deploy</a>
+                                </li>
+                                <li>
+                                    <a href="#">Manage</a>
+                                </li>
+                                <li>
+                                    <a href="#">Secure</a>
+                                </li>
+                                <li>
+                                    <a href="#">Scale</a>
+                                </li>
+                                <li>
+                                    <a href="#">Monitor</a>
+                                </li>
+                            </ul>
+                        </div>
+                        
+                        <!-- Config Infos -->
+                        <div class="col-xs-12 col-sm-9">
+                            <div class="row">
+                                <!-- Cluster Deployments -->
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="info-col">
+                                        <img src="img/cluster-deploy.svg" alt="cluster-deploy">
+                                        <h4 class="darkblue-txt">Cluster deployments</h4>
+                                        <p class="grey-txt">
+                                            Provision multiple Droplets (virtual machines) in seconds with our form-control
+                                            panel, CLI, or directly against our API.
+                                        </p>
+                                    </div>
+                                </div>
+                                <!-- Optimized Compute -->
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="info-col">
+                                        <img src="img/optimized-compute.svg" alt="optimized-compute">
+                                        <h4 class="darkblue-txt">Optimized compute types</h4>
+                                        <p class="grey-txt">
+                                            Get the compute resources you need with Standard and Optimized Droplets.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <!-- Once Click Apps -->
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="info-col">
+                                        <img src="img/one-click.svg" alt="one-click-apps">
+                                        <h4 class="darkblue-txt">One-click apps</h4>
+                                        <p class="grey-txt">
+                                            Skip the install and configuration process with the pre-build open source images
+                                            supporting Rails, Cassandra, Docker, and more.
+                                        </p>
+                                    </div>
+                                </div>
+                                <!-- Global Availability -->
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="info-col">
+                                        <img src="img/global.svg" alt="global-availability">
+                                        <h4 class="darkblue-txt">Global availability</h4>
+                                        <p class="grey-txt">
+                                            Deploy to any of our data center regions around the world.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
+        <!-- End Configuration Process -->
     </main>
     <!-- END MAIN -->
 
