slider section, feature section done, wip gradient

--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
 
         <!-- Configuration Process -->
         <section class="white-section">
-
             <!-- Configuration Heading -->
             <div class="wrapper text-center">
                 <div class="container-fluid">
@@ -255,9 +254,304 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <!-- End Configuration Process -->
+
+        <!-- Slider Section -->
+        <section class="grey-section">
+            <div class="small-wrapper text-center">
+                <!-- Slider Heading -->
+                <h2 class="darkblue-txt">Designed for developers</h2>
+                <br>
+                <!-- Slider Description -->
+                <span class="grey-txt font-size-20">Build more and spend less time managing your infrastrucutre with our easy-to-use control panel and API.</span>
+                <!-- Slider -->
+                <div class="slider">
+                    <a href="#"><i class="fas fa-chevron-left grey-txt"></i></a>
+                    <img src="img/slide.jpg" alt="slide">
+                    <a href="#"><i class="fas fa-chevron-right darkblue-txt"></i></a>
+                </div>
+                <!-- Slider Footer -->
+                <span class="darkblue-txt">Create compute server in 55 seconds or less.</span>
+                <!-- Circle List -->
+                <ul class="circle-list">
+                    <li>
+                        <a href="#" class="blue-circle"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="empty-circle"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="empty-circle"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="empty-circle"></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- End Slider Section -->
+
+        <!-- Feature Section -->
+        <section class="white-section">
+            <!-- Feature Heading -->
+            <div class="wrapper text-center">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="darkblue-txt">The feature your business needs</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
+            <!-- Features -->
+            <div class="wrapper">
+                <div class="container-fluid">
+                    <div class="row">  
+                        <!-- Pricing -->
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="info-col">
+                                <img src="img/pred-pricing.svg" alt="predictable-pricing">
+                                <h4 class="darkblue-txt">Predictable Pricing</h4>
+                                <p class="grey-txt">
+                                    Leave complex pricing structures behind. Always know what you’ll pay 
+                                    per month with a flat, industry-leading pricing structure.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Service -->
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="info-col">
+                                <img src="img/world-class.svg" alt="world-class-service">
+                                <h4 class="darkblue-txt">World-class service</h4>
+                                <p class="grey-txt">
+                                    Free around-the-clock technical support for all customers. 
+                                    You’ll feel the love.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Platform -->
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="info-col">
+                                <img src="img/reliable-platform.svg" alt="reliable-platform">
+                                <h4 class="darkblue-txt">Reliable platform</h4>
+                                <p class="grey-txt">
+                                    More than 100,000 developer teams worldwide trust 
+                                    DigitalOcean to support their business with a 99.99% uptime SLA for all services.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- End Feature Section -->
+
+        <!-- Service Tab Section -->
+        <section class="blue-section">
+            <div class="wrapper">
+                <div class="container">
+                    <!-- Service Tab Heading -->
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="white-txt text-center">Service your customers around the world from 12 regions.</h2>
+                        </div>
+                    </div>
+                    <!-- Service Tab -->
+                    <div class="row">
+                        <!-- Service Tab Left -->
+                        <div class="col-xs-12 col-md-6">
+                            <!-- 1st Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 2nd Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 3rd Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 4th Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 5th Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 6th Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Service Tab Right -->
+                        <div class="col-xs-12 col-md-6">
+                            <!-- 1st Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 2nd Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 3rd Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 4th Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 5th Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                    <div class="white-line"></div>
+                                </div>
+                            </div>
+                            <!-- 6th Row -->
+                            <div class="tab-row">
+                                <div class="row">  
+                                    <div class="col-xs-2">
+                                        <span class="white-txt">AMS2</span>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                    </div>
+                                    <div class="col-xs-3">
+                                        <a href="#" class="aqua-txt">Test Speed ></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Service Tab -->
     </main>
     <!-- END MAIN -->
 
