added service tab section

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                                     Leave complex pricing structures behind. Always know what you’ll pay 
                                     per month with a flat, industry-leading pricing structure.
                                 </p>
+                                <a href="#">Pricing ></a>
                             </div>
                         </div>
                         <!-- Service -->
@@ -331,6 +332,7 @@
                                     Free around-the-clock technical support for all customers. 
                                     You’ll feel the love.
                                 </p>
+                                <a href="#">Support ></a>
                             </div>
                         </div>
                         <!-- Platform -->
@@ -342,6 +344,7 @@
                                     More than 100,000 developer teams worldwide trust 
                                     DigitalOcean to support their business with a 99.99% uptime SLA for all services.
                                 </p>
+                                <a href="#">Security ></a>
                             </div>
                         </div>
                     </div>
@@ -384,7 +387,7 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">AMS3</span>
                                     </div>
                                     <div class="col-xs-7">
                                         <span class="lightgrey-txt">Amsterdam, Netherlands</span>
@@ -399,10 +402,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">BLR1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">Bangalore, India</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -414,10 +417,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">FRA1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">Frankfurt, German</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -429,10 +432,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">LON1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">London, UK</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -444,10 +447,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">NYC1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">New York, USA</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -476,7 +479,7 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">AMS3</span>
                                     </div>
                                     <div class="col-xs-7">
                                         <span class="lightgrey-txt">Amsterdam, Netherlands</span>
@@ -491,10 +494,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">BLR1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">Bangalore, India</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -506,10 +509,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">FRA1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">Frankfurt, German</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -521,10 +524,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">LON1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">London, UK</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -536,10 +539,10 @@
                             <div class="tab-row">
                                 <div class="row">  
                                     <div class="col-xs-2">
-                                        <span class="white-txt">AMS2</span>
+                                        <span class="white-txt">NYC1</span>
                                     </div>
                                     <div class="col-xs-7">
-                                        <span class="lightgrey-txt">Amsterdam, Netherlands</span>
+                                        <span class="lightgrey-txt">New York, USA</span>
                                     </div>
                                     <div class="col-xs-3">
                                         <a href="#" class="aqua-txt">Test Speed ></a>
@@ -552,6 +555,10 @@
             </div>
         </section>
         <!-- End Service Tab -->
+
+        <section class="grey-section">
+
+        </section>
     </main>
     <!-- END MAIN -->
 
